--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -43,7 +43,7 @@
           <div id="navbarVerticalMenuPagesMenu">
             <!-- Collapse -->
             <div class="nav-item">
-              <a class="nav-link " href="/erp" data-placement="left">
+              <a class="nav-link " routerLink="requisiciones"  data-placement="left">
                 <i class="bi-stickies nav-icon"></i>
                 <span class="nav-link-title">Requisiciones</span>
               </a>
