--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -49,7 +49,7 @@
               </a>
             </div>
             <div class="nav-item">
-              <a class="nav-link " href="/erp" data-placement="left">
+              <a class="nav-link " routerLink="compras" data-placement="left">
                 <i class="bi-receipt nav-icon"></i>
                 <span class="nav-link-title">Ordenes de Compra</span>
               </a>
