--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -62,8 +62,8 @@
               </a>
 
               <div id="navbarVerticalMenuPagesAccountMenu" class="nav-collapse collapse " data-bs-parent="#navbarVerticalMenuPagesMenu">
-                <a class="nav-link " href="./account-settings.html">Entrada</a>
-                <a class="nav-link " href="./account-billing.html">Registros</a>
+                <a class="nav-link " routerLink="entradas/material">Entrada</a>
+                <a class="nav-link " routerLink="entradas/registros">Registros</a>
               </div>
             </div>
           </div>
