--- a/src/app/pages/modules/requisitions/requisitions.component.html
+++ b/src/app/pages/modules/requisitions/requisitions.component.html
@@ -82,6 +82,7 @@
               <div class="col-md-4">
                   <label for="producto" class="form-label">Producto</label>
                   <select id="producto" class="selectized">
+                      <option value=""></option>
                       <option value="1">Seleccione 1 producto...</option>
                       <option value="2">Seleccione un producto...</option>
                       <option value="3">Seleccione 3 producto...</option>
