--- a/src/app/pages/modules/orders/orders.component.html
+++ b/src/app/pages/modules/orders/orders.component.html
@@ -5,7 +5,7 @@
         <h1 class="page-header-title">Ordenes de compra</h1>
       </div>
       <!-- End Col -->
-  
+
       <div class="col-auto">
         <a class="btn btn-primary" href="javascript:;" data-bs-toggle="modal" data-bs-target="#modalAdd">
           <i class="bi-file-earmark-plus me-1"></i> Nueva Orden de compra
@@ -16,8 +16,197 @@
     <!-- End Row -->
   </div>
   <!-- End Page Header -->
-  
-  
+
+  <div class="row justify-content-end mb-3">
+    <div class="col-lg">
+      <!-- Datatable Info -->
+      <div id="datatableCounterInfo" style="display: none;">
+        <div class="d-sm-flex justify-content-lg-end align-items-sm-center">
+          <span class="d-block d-sm-inline-block fs-5 me-3 mb-2 mb-sm-0">
+            <span id="datatableCounter">0</span>
+            Selected
+          </span>
+          <a class="btn btn-outline-danger btn-sm mb-2 mb-sm-0 me-2" href="javascript:;">
+            <i class="bi-trash"></i> Delete
+          </a>
+          <a class="btn btn-white btn-sm mb-2 mb-sm-0 me-2" href="javascript:;">
+            <i class="bi-archive"></i> Archive
+          </a>
+          <a class="btn btn-white btn-sm mb-2 mb-sm-0 me-2" href="javascript:;">
+            <i class="bi-upload"></i> Publish
+          </a>
+          <a class="btn btn-white btn-sm mb-2 mb-sm-0" href="javascript:;">
+            <i class="bi-x-lg"></i> Unpublish
+          </a>
+        </div>
+      </div>
+      <!-- End Datatable Info -->
+    </div>
+  </div>
+  <!-- End Row -->
+
+  <!-- Card -->
+  <div class="card">
+    <!-- Header -->
+    <div class="card-header card-header-content-md-between">
+      <div class="mb-2 mb-md-0">
+        <form>
+          <!-- Search -->
+          <div class="input-group input-group-merge input-group-flush">
+            <div class="input-group-prepend input-group-text">
+              <i class="bi-search"></i>
+            </div>
+            <input id="datatableSearch" type="search" class="form-control" placeholder="Buscar" aria-label="Search users">
+          </div>
+          <!-- End Search -->
+        </form>
+      </div>
+
+      <div class="d-grid d-sm-flex gap-2">
+        <button class="btn btn-white" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">
+          <i class="bi-filter me-1"></i> Filtros
+        </button>
+      </div>
+    </div>
+    <!-- End Header -->
+
+    <!-- Table -->
+    <div class="table-responsive datatable-custom">
+      <table id="datatable" class="table table-borderless table-thead-bordered table-nowrap table-align-middle card-table" data-hs-datatables-options='{
+               "columnDefs": [{
+                  "targets": [0, 4, 9],
+                  "width": "5%",
+                  "orderable": false
+                }],
+               "order": [],
+               "info": {
+                 "totalQty": "#datatableWithPaginationInfoTotalQty"
+               },
+               "search": "#datatableSearch",
+               "entries": "#datatableEntries",
+               "pageLength": 12,
+               "isResponsive": false,
+               "isShowPaging": false,
+               "pagination": "datatablePagination"
+             }'>
+        <thead class="thead-light">
+          <tr>
+            <th class="table-column-pe-0">Folio</th>
+            <th>Req</th>
+            <th>Proveedor</th>
+            <th>Solicitado Por</th>
+            <th>Fecha/Hora</th>
+            <th>Sub Total</th>
+            <th>Impuestos</th>
+            <th>Total</th>
+            <th>Moneda</th>
+            <th>Acciones</th>
+          </tr>
+        </thead>
+
+        <tbody>
+          <tr>
+            <td class="table-column-pe-0">
+              <h5 class="text-inherit mb-0">1234</h5>
+            </td>
+            <td>12345</td>
+            <td>Google</td>
+            <td>
+              jmendezh
+            </td>
+            <td>2384741241</td>
+            <td>$65</td>
+            <td>60</td>
+            <td>2</td>
+            <td>
+              <div class="btn-group" role="group">
+                <a class="btn btn-white btn-sm" href="./ecommerce-product-details.html">
+                  <i class="bi-pencil-fill me-1"></i> Edit
+                </a>
+
+                <!-- Button Group -->
+                <div class="btn-group">
+                  <button type="button" class="btn btn-white btn-icon btn-sm dropdown-toggle dropdown-toggle-empty" id="productsEditDropdown1" data-bs-toggle="dropdown" aria-expanded="false"></button>
+
+                  <div class="dropdown-menu dropdown-menu-end mt-1" aria-labelledby="productsEditDropdown1">
+                    <a class="dropdown-item" href="#">
+                      <i class="bi-trash dropdown-item-icon"></i> Delete
+                    </a>
+                    <a class="dropdown-item" href="#">
+                      <i class="bi-archive dropdown-item-icon"></i> Archive
+                    </a>
+                    <a class="dropdown-item" href="#">
+                      <i class="bi-upload dropdown-item-icon"></i> Publish
+                    </a>
+                    <a class="dropdown-item" href="#">
+                      <i class="bi-x-lg dropdown-item-icon"></i> Unpublish
+                    </a>
+                  </div>
+                </div>
+                <!-- End Button Group -->
+              </div>
+            </td>
+          </tr>
+
+        </tbody>
+      </table>
+    </div>
+    <!-- End Table -->
+
+    <!-- Footer -->
+    <div class="card-footer">
+      <div class="row justify-content-center justify-content-sm-between align-items-sm-center">
+        <div class="col-sm mb-2 mb-sm-0">
+          <div class="d-flex justify-content-center justify-content-sm-start align-items-center">
+            <span class="me-2">Mostrar:</span>
+
+            <!-- Select -->
+            <div class="tom-select-custom">
+              <select id="datatableEntries" class="js-select form-select form-select-borderless w-auto" autocomplete="off" data-hs-tom-select-options='{
+                        "searchInDropdown": false,
+                        "hideSearch": true
+                      }'>
+                <option value="12">12</option>
+                <option value="14" selected>14</option>
+                <option value="16">16</option>
+                <option value="18">18</option>
+              </select>
+            </div>
+            <!-- End Select -->
+
+            <span class="text-secondary me-2">of</span>
+
+            <!-- Pagination Quantity -->
+            <span id="datatableWithPaginationInfoTotalQty">12312</span>
+          </div>
+        </div>
+        <!-- End Col -->
+
+        <div class="col-sm-auto">
+          <div class="d-flex justify-content-center justify-content-sm-end">
+            <!-- Pagination -->
+            <nav id="datatablePagination" aria-label="Activity pagination"></nav>
+          </div>
+        </div>
+        <!-- End Col -->
+      </div>
+      <!-- End Row -->
+    </div>
+    <!-- End Footer -->
+  </div>
+  <!-- End Card -->
+
+  <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
+    <div class="offcanvas-header">
+      <h5 class="offcanvas-title" id="offcanvasRightLabel">Filtrar información</h5>
+      <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+    </div>
+    <div class="offcanvas-body">
+      ...
+    </div>
+  </div>
+
+
   <div class="modal" id="modalAdd" tabindex="-1" role="dialog" aria-hidden="true" >
     <div class="modal-dialog modal-dialog-scrollable modal-xl">
       <div class="modal-content">
@@ -168,4 +357,3 @@
       </div>
     </div>
   </div>
-  
