--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -26,7 +26,7 @@
       <div class="navbar-vertical-content">
         <div id="navbarVerticalMenu" class="nav nav-pills nav-vertical card-navbar-nav">
           <div class="nav-item">
-            <a class="nav-link " href="/erp" data-placement="left">
+            <a class="nav-link " routerLink="/erp" data-placement="left">
               <i class="bi-house-door nav-icon"></i>
               <span class="nav-link-title">Tablero</span>
             </a>
