--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,2 @@
+<ngx-spinner bdColor = "rgba(0, 0, 0, 0.8)" size = "default" color="#0d8abc" type="square-jelly-box" [fullScreen] = "true"><p style="color: white" > Procesando... </p></ngx-spinner>
 <router-outlet />
