--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
+/* styles.css o styles.scss */
+@import '../node_modules/ngx-spinner/animations/square-jelly-box.css';
+
