--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -1,1 +1,100 @@
-<p>login works!</p>
+  <!-- ========== MAIN CONTENT ========== -->
+  <main id="content" role="main" class="main" style="padding: 0 !important;">
+    <div class="position-fixed top-0 end-0 start-0 bg-img-start" style="height: 32rem; background-image: url(card-6.svg);">
+      <!-- Shape -->
+      <div class="shape shape-bottom zi-1">
+        <svg preserveAspectRatio="none" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" viewBox="0 0 1921 273">
+          <polygon fill="#fff" points="0,273 1921,273 1921,0 " />
+        </svg>
+      </div>
+      <!-- End Shape -->
+    </div>
+
+    <!-- Content -->
+    <div class="container py-5 py-sm-7">
+      <a class="d-flex justify-content-center mb-5" href="./index.html">
+        <img class="zi-2" src="./logo.png" alt="Image Description" style="width: 8rem;">
+      </a>
+
+      <div class="mx-auto" style="max-width: 30rem;">
+        <!-- Card -->
+        <div class="card card-lg mb-5">
+          <div class="card-body">
+            <!-- Form -->
+            <form class="js-validate needs-validation" #fLogin="ngForm" (submit)="login(fLogin)" [noValidate]="true">
+              <div class="text-center">
+                <div class="mb-5">
+                  <h1 class="display-5">Iniciar Sesion</h1>
+                  <p>Si aun no tiene su cuenta, contacte a Soporte</p>
+                </div>
+              </div>
+
+              <!-- Form -->
+              <div class="mb-4">
+                <label class="form-label" for="signinSrEmail">Correo</label>
+                <input type="email" class="form-control form-control-lg" name="email" id="signinSrEmail" tabindex="1" placeholder="email@address.com" aria-label="email@address.com" required [(ngModel)]="model.email">
+                <span class="invalid-feedback" id="errorCorreo">Please enter a valid email address.</span>
+              </div>
+              <!-- End Form -->
+
+              <!-- Form -->
+              <div class="mb-4">
+                <label class="form-label w-100" for="signupSrPassword" tabindex="0">
+                  <span class="d-flex justify-content-between align-items-center">
+                    <span>Password</span>
+                    <a class="form-label-link mb-0" href="./authentication-reset-password-basic.html" data-bs-toggle="modal" data-bs-target="#exampleModal">¿Olvidaste Tu Contraseña?</a>
+                  </span>
+                </label>
+
+                <div class="input-group input-group-merge" data-hs-validation-validate-class>
+                  <input type="{{type}}" class="js-toggle-password form-control form-control-lg" name="password" id="signupSrPassword" placeholder="********" aria-label="8+ characters required" required [(ngModel)]="model.password">
+                  <a id="changePassTarget" class="input-group-append input-group-text" href="javascript:;" (click)="(type=='password')?type='text':type='password'">
+                    <i id="changePassIcon" class="bi-eye"></i>
+                  </a>
+                </div>
+
+                <span class="invalid-feedback">Please enter a valid password.</span>
+              </div>
+              <!-- End Form -->
+
+              <!-- Form Check -->
+              <div class="form-check mb-4">
+                <input class="form-check-input" type="checkbox" name="remember" [(ngModel)]="model.remember" id="termsCheckbox">
+                <label class="form-check-label" for="termsCheckbox">
+                  Recordar Datos
+                </label>
+              </div>
+              <!-- End Form Check -->
+
+              <div class="d-grid">
+                <button type="submit" class="btn btn-primary btn-lg">Accesar</button>
+              </div>
+            </form>
+            <!-- End Form -->
+          </div>
+        </div>
+        <!-- End Card -->
+      </div>
+    </div>
+    <!-- End Content -->
+  </main>
+  <!-- ========== END MAIN CONTENT ========== -->
+
+
+  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="exampleModalLabel">Recuperar Contraseña</h1>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <input type="email" class="form-control" [(ngModel)]="model.email">
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+          <button type="button" class="btn btn-primary" (click)="sendRecPassword()">Procesar</button>
+        </div>
+      </div>
+    </div>
+  </div>
