--- a/src/app/pages/modules/init/init.component.html
+++ b/src/app/pages/modules/init/init.component.html
@@ -7,12 +7,6 @@
         <h1 class="page-header-title">Dashboard</h1>
       </div>
       <!-- End Col -->
-
-      <div class="col-auto">
-        <a class="btn btn-primary" href="javascript:;" data-bs-toggle="modal" data-bs-target="#inviteUserModal">
-          <i class="bi-person-plus-fill me-1"></i> Invite users
-        </a>
-      </div>
       <!-- End Col -->
     </div>
     <!-- End Row -->
@@ -25,7 +19,7 @@
       <!-- Card -->
       <a class="card card-hover-shadow h-100" href="#">
         <div class="card-body">
-          <h6 class="card-subtitle">Total Users</h6>
+          <h6 class="card-subtitle">Total Requisiciones</h6>
 
           <div class="row align-items-center gx-2 mb-1">
             <div class="col-6">
@@ -92,7 +86,7 @@
       <!-- Card -->
       <a class="card card-hover-shadow h-100" href="#">
         <div class="card-body">
-          <h6 class="card-subtitle">Sessions</h6>
+          <h6 class="card-subtitle">Aceptadas</h6>
 
           <div class="row align-items-center gx-2 mb-1">
             <div class="col-6">
@@ -159,7 +153,7 @@
       <!-- Card -->
       <a class="card card-hover-shadow h-100" href="#">
         <div class="card-body">
-          <h6 class="card-subtitle">Avg. Click Rate</h6>
+          <h6 class="card-subtitle">Pendientes</h6>
 
           <div class="row align-items-center gx-2 mb-1">
             <div class="col-6">
@@ -226,7 +220,7 @@
       <!-- Card -->
       <a class="card card-hover-shadow h-100" href="#">
         <div class="card-body">
-          <h6 class="card-subtitle">Pageviews</h6>
+          <h6 class="card-subtitle">Ordenes de compra</h6>
 
           <div class="row align-items-center gx-2 mb-1">
             <div class="col-6">
@@ -290,153 +284,13 @@
   <!-- End Stats -->
 
   <div class="row">
-    <div class="col-lg-5 mb-3 mb-lg-5">
-      <!-- Card -->
-      <div class="card h-100">
-        <!-- Header -->
-        <div class="card-header card-header-content-between">
-          <h4 class="card-header-title">Import data into Front Dashboard</h4>
 
-          <!-- Dropdown -->
-          <div class="dropdown">
-            <button type="button" class="btn btn-ghost-secondary btn-icon btn-sm rounded-circle" id="reportsOverviewDropdown2" data-bs-toggle="dropdown" aria-expanded="false">
-              <i class="bi-three-dots-vertical"></i>
-            </button>
-
-            <div class="dropdown-menu dropdown-menu-end mt-1" aria-labelledby="reportsOverviewDropdown2">
-              <span class="dropdown-header">Settings</span>
-
-              <a class="dropdown-item" href="#">
-                <i class="bi-share-fill dropdown-item-icon"></i> Share chart
-              </a>
-              <a class="dropdown-item" href="#">
-                <i class="bi-download dropdown-item-icon"></i> Download
-              </a>
-              <a class="dropdown-item" href="#">
-                <i class="bi-alt dropdown-item-icon"></i> Connect other apps
-              </a>
-
-              <div class="dropdown-divider"></div>
-
-              <span class="dropdown-header">Feedback</span>
-
-              <a class="dropdown-item" href="#">
-                <i class="bi-chat-left-dots dropdown-item-icon"></i> Report
-              </a>
-            </div>
-          </div>
-          <!-- End Dropdown -->
-        </div>
-        <!-- End Header -->
-
-        <!-- Body -->
-        <div class="card-body">
-          <p>See and talk to your users and leads immediately by importing your data into the Front Dashboard platform.</p>
-
-          <ul class="list-group list-group-flush list-group-no-gutters">
-            <li class="list-group-item">
-              <h5 class="card-title">Import users from:</h5>
-            </li>
-
-            <!-- List Group Item -->
-            <li class="list-group-item">
-              <div class="d-flex">
-                <div class="flex-shrink-0">
-                  <img class="avatar avatar-xs avatar-4x3" src="./assets/svg/brands/capsule-icon.svg" alt="Image Description">
-                </div>
-                <div class="flex-grow-1 ms-3">
-                  <div class="row align-items-center">
-                    <div class="col">
-                      <h5 class="mb-0">Capsule</h5>
-                      <span class="d-block fs-6 text-body">Users</span>
-                    </div>
-                    <!-- End Col -->
-
-                    <div class="col-auto">
-                      <a class="btn btn-primary btn-sm" href="#" title="Launch importer" target="_blank">
-                        Launch <span class="d-none d-sm-inline-block">importer</span>
-                        <i class="bi-box-arrow-up-right ms-1"></i>
-                      </a>
-                    </div>
-                    <!-- End Col -->
-                  </div>
-                  <!-- End Row -->
-                </div>
-              </div>
-            </li>
-            <!-- End List Group Item -->
-
-            <!-- List Group Item -->
-            <li class="list-group-item">
-              <div class="d-flex">
-                <div class="flex-shrink-0">
-                  <img class="avatar avatar-xs avatar-4x3" src="./assets/svg/brands/mailchimp-icon.svg" alt="Image Description">
-                </div>
-                <div class="flex-grow-1 ms-3">
-                  <div class="row align-items-center">
-                    <div class="col">
-                      <h5 class="mb-0">Mailchimp</h5>
-                      <span class="d-block fs-6 text-body">Users</span>
-                    </div>
-                    <!-- End Col -->
-
-                    <div class="col-auto">
-                      <a class="btn btn-primary btn-sm" href="#" title="Launch importer" target="_blank">
-                        Launch <span class="d-none d-sm-inline-block">importer</span>
-                        <i class="bi-box-arrow-up-right ms-1"></i>
-                      </a>
-                    </div>
-                    <!-- End Col -->
-                  </div>
-                  <!-- End Row -->
-                </div>
-              </div>
-            </li>
-            <!-- End List Group Item -->
-
-            <!-- List Group Item -->
-            <li class="list-group-item">
-              <div class="d-flex">
-                <div class="flex-shrink-0">
-                  <img class="avatar avatar-xs avatar-4x3" src="./assets/svg/brands/google-webdev-icon.svg" alt="Image Description">
-                </div>
-                <div class="flex-grow-1 ms-3">
-                  <div class="row align-items-center">
-                    <div class="col">
-                      <h5 class="mb-0">Webdev</h5>
-                      <span class="d-block fs-6 text-body">Users</span>
-                    </div>
-                    <!-- End Col -->
-
-                    <div class="col-auto">
-                      <a class="btn btn-primary btn-sm" href="#" title="Launch importer" target="_blank">
-                        Launch <span class="d-none d-sm-inline-block">importer</span>
-                        <i class="bi-box-arrow-up-right ms-1"></i>
-                      </a>
-                    </div>
-                    <!-- End Col -->
-                  </div>
-                  <!-- End Row -->
-                </div>
-              </div>
-            </li>
-            <!-- End List Group Item -->
-
-            <li class="list-group-item"><span class="small text-muted">Or you can <a class="link" href="#">sync data to Front Dashboard</a> to ensure your data is always up-to-date.</span></li>
-          </ul>
-        </div>
-        <!-- End Body -->
-      </div>
-      <!-- End Card -->
-    </div>
-    <!-- End Col -->
-
-    <div class="col-lg-7 mb-3 mb-lg-5">
+    <div class="col-lg-12 mb-3 mb-lg-5">
       <!-- Card -->
       <div class="card h-100">
         <!-- Header -->
         <div class="card-header card-header-content-sm-between">
-          <h4 class="card-header-title mb-2 mb-sm-0">Monthly expenses</h4>
+          <h4 class="card-header-title mb-2 mb-sm-0">Grafica de datos</h4>
 
           <!-- Nav -->
           <ul class="nav nav-segment nav-fill" id="expensesTab" role="tablist">
@@ -568,7 +422,7 @@
       <div class="row justify-content-between align-items-center flex-grow-1">
         <div class="col-md">
           <div class="d-flex justify-content-between align-items-center">
-            <h4 class="card-header-title">Users</h4>
+            <h4 class="card-header-title">Ultimos Movimientos</h4>
 
             <!-- Datatable Info -->
             <div id="datatableCounterInfo" style="display: none;">
@@ -1228,232 +1082,5 @@
     <!-- End Footer -->
   </div>
   <!-- End Card -->
-
-  <div class="row">
-    <div class="col-lg-6 mb-3 mb-lg-0">
-      <!-- Card -->
-      <div class="card h-100">
-        <!-- Header -->
-        <div class="card-header card-header-content-sm-between">
-          <h4 class="card-header-title mb-2 mb-sm-0">Transactions</h4>
-
-          <!-- Daterangepicker -->
-          <button id="js-daterangepicker-predefined" class="btn btn-ghost-secondary btn-sm dropdown-toggle">
-            <i class="bi-calendar-week"></i>
-            <span class="js-daterangepicker-predefined-preview ms-1"></span>
-          </button>
-          <!-- End Daterangepicker -->
-        </div>
-        <!-- End Header -->
-
-        <!-- Body -->
-        <div class="card-body">
-          <!-- Chart -->
-          <div class="chartjs-custom mx-auto" style="height: 20rem;">
-            <canvas class="js-chart-datalabels" data-hs-chartjs-options='{
-                          "type": "bubble",
-                          "data": {
-                            "datasets": [
-                              {
-                                "label": "Label 1",
-                                "data": [
-                                  {"x": 50, "y": 65, "r": 99}
-                                ],
-                                "color": "#fff",
-                                "backgroundColor": "rgba(55, 125, 255, 0.9)",
-                                "borderColor": "transparent"
-                              },
-                              {
-                                "label": "Label 2",
-                                "data": [
-                                  {"x": 46, "y": 42, "r": 65}
-                                ],
-                                "color": "#fff",
-                                "backgroundColor": "rgba(100, 0, 214, 0.8)",
-                                "borderColor": "transparent"
-                              },
-                              {
-                                "label": "Label 3",
-                                "data": [
-                                  {"x": 48, "y": 15, "r": 38}
-                                ],
-                                "color": "#fff",
-                                "backgroundColor": "#00c9db",
-                                "borderColor": "transparent"
-                              },
-                              {
-                                "label": "Label 3",
-                                "data": [
-                                  {"x": 55, "y": 2, "r": 61}
-                                ],
-                                "color": "#fff",
-                                "backgroundColor": "#4338ca",
-                                "borderColor": "transparent"
-                              }
-                            ]
-                          },
-                          "options": {
-                            "scales": {
-                              "y": {
-                                "grid": {
-                                  "display": false,
-                                  "drawBorder": false
-                                },
-                                "ticks": {
-                                  "display": false,
-                                  "max": 100,
-                                  "beginAtZero": true
-                                }
-                              },
-                              "x": {
-                              "grid": {
-                                  "display": false,
-                                  "drawBorder": false
-                                },
-                                "ticks": {
-                                  "display": false,
-                                  "max": 100,
-                                  "beginAtZero": true
-                                }
-                              }
-                            },
-                            "plugins": {
-                              "tooltip": false
-                            }
-                          }
-                        }'></canvas>
-          </div>
-          <!-- End Chart -->
-
-          <div class="row justify-content-center">
-            <div class="col-auto">
-              <span class="legend-indicator bg-primary"></span> New
-            </div>
-            <!-- End Col -->
-
-            <div class="col-auto">
-              <span class="legend-indicator" style="background-color: #7000f2;"></span> Pending
-            </div>
-            <!-- End Col -->
-
-            <div class="col-auto">
-              <span class="legend-indicator bg-info"></span> Failed
-            </div>
-            <!-- End Col -->
-          </div>
-          <!-- End Row -->
-        </div>
-        <!-- End Body -->
-      </div>
-      <!-- End Card -->
-    </div>
-
-    <div class="col-lg-6">
-      <!-- Card -->
-      <div class="card h-100">
-        <!-- Header -->
-        <div class="card-header card-header-content-between">
-          <h4 class="card-header-title">Reports overview</h4>
-
-          <!-- Dropdown -->
-          <div class="dropdown">
-            <button type="button" class="btn btn-ghost-secondary btn-icon btn-sm rounded-circle" id="reportsOverviewDropdown1" data-bs-toggle="dropdown" aria-expanded="false">
-              <i class="bi-three-dots-vertical"></i>
-            </button>
-
-            <div class="dropdown-menu dropdown-menu-end mt-1" aria-labelledby="reportsOverviewDropdown1">
-              <span class="dropdown-header">Settings</span>
-
-              <a class="dropdown-item" href="#">
-                <i class="bi-share-fill dropdown-item-icon"></i> Share reports
-              </a>
-              <a class="dropdown-item" href="#">
-                <i class="bi-download dropdown-item-icon"></i> Download
-              </a>
-              <a class="dropdown-item" href="#">
-                <i class="bi-alt dropdown-item-icon"></i> Connect other apps
-              </a>
-
-              <div class="dropdown-divider"></div>
-
-              <span class="dropdown-header">Feedback</span>
-
-              <a class="dropdown-item" href="#">
-                <i class="bi-chat-left-dots dropdown-item-icon"></i> Report
-              </a>
-            </div>
-          </div>
-          <!-- End Dropdown -->
-        </div>
-        <!-- End Header -->
-
-        <!-- Body -->
-        <div class="card-body">
-          <span class="h1 d-block mb-4">$7,431.14 USD</span>
-
-          <!-- Progress -->
-          <div class="progress rounded-pill mb-2">
-            <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" data-bs-toggle="tooltip" data-bs-placement="top" title="Gross value"></div>
-            <div class="progress-bar opacity-50" role="progressbar" style="width: 33%" aria-valuenow="33" aria-valuemin="0" aria-valuemax="100" data-bs-toggle="tooltip" data-bs-placement="top" title="Net volume from sales"></div>
-            <div class="progress-bar opacity-25" role="progressbar" style="width: 9%" aria-valuenow="9" aria-valuemin="0" aria-valuemax="100" data-bs-toggle="tooltip" data-bs-placement="top" title="New volume from sales"></div>
-          </div>
-
-          <div class="d-flex justify-content-between mb-4">
-            <span>0%</span>
-            <span>100%</span>
-          </div>
-          <!-- End Progress -->
-
-          <!-- Table -->
-          <div class="table-responsive">
-            <table class="table table-lg table-nowrap card-table mb-0">
-              <tr>
-                <th scope="row">
-                  <span class="legend-indicator bg-primary"></span>Gross value
-                </th>
-                <td>$3,500.71</td>
-                <td>
-                  <span class="badge bg-soft-success text-success">+12.1%</span>
-                </td>
-              </tr>
-
-              <tr>
-                <th scope="row">
-                  <span class="legend-indicator bg-primary opacity-50"></span>Net volume from sales
-                </th>
-                <td>$2,980.45</td>
-                <td>
-                  <span class="badge bg-soft-warning text-warning">+6.9%</span>
-                </td>
-              </tr>
-
-              <tr>
-                <th scope="row">
-                  <span class="legend-indicator bg-primary opacity-25"></span>New volume from sales
-                </th>
-                <td>$950.00</td>
-                <td>
-                  <span class="badge bg-soft-danger text-danger">-1.5%</span>
-                </td>
-              </tr>
-
-              <tr>
-                <th scope="row">
-                  <span class="legend-indicator"></span>Other
-                </th>
-                <td>32</td>
-                <td>
-                  <span class="badge bg-soft-success text-success">1.9%</span>
-                </td>
-              </tr>
-            </table>
-          </div>
-          <!-- End Table -->
-        </div>
-        <!-- End Body -->
-      </div>
-      <!-- End Card -->
-    </div>
-  </div>
 </div>
 <!-- End Content -->
