--- a/src/app/pages/modules/requisitions/requisitions.component.html
+++ b/src/app/pages/modules/requisitions/requisitions.component.html
@@ -22,12 +22,16 @@
 
   <ul class="nav nav-tabs" id="myTab" role="tablist">
     <li class="nav-item" role="presentation">
-      <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home-tab-pane" type="button" role="tab" aria-controls="home-tab-pane" aria-selected="true">
+      <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home-tab-pane" type="button" role="tab" aria-controls="home-tab-pane" aria-selected="true"
+        (click)="[getData(),Asing=false]"
+      >
         Mis Requisiciónes
       </button>
     </li>
     <li class="nav-item" role="presentation">
-      <button class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile-tab-pane" type="button" role="tab" aria-controls="profile-tab-pane" aria-selected="false">
+      <button class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile-tab-pane" type="button" role="tab" aria-controls="profile-tab-pane" aria-selected="false"
+        (click)="[getDataAsing(),Asing=true]"
+      >
         Asignadas
       </button>
     </li>
@@ -117,11 +121,8 @@
                   <a class="dropdown-item" href="#">
                     <i class="bi-archive dropdown-item-icon"></i> Archive
                   </a>
-                  <a class="dropdown-item" href="#">
-                    <i class="bi-upload dropdown-item-icon"></i> Publish
-                  </a>
-                  <a class="dropdown-item" href="#">
-                    <i class="bi-x-lg dropdown-item-icon"></i> Unpublish
+                  <a class="dropdown-item" *ngIf="!Asing" (click)="itemSelect = item._id" data-bs-toggle="modal" data-bs-target="#asingModal">
+                    <i class="bi-upload dropdown-item-icon"></i> Asignar
                   </a>
                 </div>
               </div>
@@ -189,6 +190,26 @@
   </div>
 </div>
 
+<div class="modal fade" id="asingModal" tabindex="-1" aria-labelledby="asingModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-sm modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="exampleModalLabel">Asignar Usuario</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <select class="form-select" name="AsingId" [(ngModel)]="AsingId">
+          <option *ngFor="let item of users" value="{{item._id}}">{{item.email}}</option>
+        </select>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+        <button type="button" class="btn btn-primary" (click)="asignar()">Asignar</button>
+      </div>
+    </div>
+  </div>
+</div>
+
 
 
 <div class="modal" id="modalAdd" tabindex="-1" role="dialog" aria-hidden="true" >
@@ -201,9 +222,9 @@
         </div>
         <div class="modal-body">
           <div class="row mb-3">
-            <div class="col">
+            <div class="col-3">
                 <label for="solicitadoPor" class="form-label">Solicitado Por</label>
-                <input type="text" class="form-control" id="solicitadoPor" value="JCMH" readonly>
+                <input type="text" class="form-control" id="solicitadoPor" name="userName" [(ngModel)]="user.userName" readonly>
             </div>
           </div>
           <div class="row mb-3">
